rename the project

--- a/pgm/pom.xml
+++ b/pgm/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>Spring</groupId>
-  <artifactId>pgm</artifactId>
+  <artifactId>programs</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
